--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li id="tpc4"><a class="list" href="#links4">Ebooks</a></li>
           <li id="tpc5"><a class="list" href="#links5">Online Tools</a></li>
           <li id="tpc6"><a class="list" href="#links6">Resources</a></li>
-          <li id="tpc7"><a class="list" href="#links7">Fonts & Icons</a></li>
+          <li id="tpc7"><a class="list" href="#links7">Fonts, Icons, and Colors</a></li>
           <li id="tpc8"><a class="list" href="#links8">Online Playgrounds</a></li>
           <li id="tpc9"><a class="list" href="#links9">Tech News</a></li>
           <li id="tpc10"><a class="list" href="#links10">Coding Practice</a></li>
@@ -888,7 +888,7 @@
         </div>
 
         <!-- FONTS & ICONS -->
-        <h2>Fonts & Icons</h2> 
+        <h2>Fonts, Icons, and Colors</h2> 
         <div class="topic--content" id="links7">
             <div class="content-item fontsicons">
               <div class="padding">
@@ -1016,6 +1016,50 @@
                   <div class="description">
                     <p>
                       Free icons!
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="content-item fontsicons">
+              <div class="padding">
+                <a href="https://colorhunt.co/" target="_blank">
+                  <div class="link-title">Color Hunt</div>
+                  <div class="description">
+                    <p>
+                      Hunt your favorite palettes online!
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="content-item fontsicons">
+              <div class="padding">
+                <a href="https://pigment.shapefactory.co/" target="_blank">
+                  <div class="link-title">Pigment</div>
+                  <div class="description">
+                    <p>
+                      Browse color palettes and customize your pigment and lightning preferences!
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="content-item fontsicons">
+              <div class="padding">
+                <a href="https://colors.muz.li/" target="_blank">
+                  <div class="link-title">Muzli Colors</div>
+                  <div class="description">
+                    <p>
+                      Create beautiful color schemes by this generator!
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="content-item fontsicons">
+              <div class="padding">
+                <a href="https://material.io/resources/color/#!/?view.left=0&view.right=0" target="_blank">
+                  <div class="link-title">material.io</div>
+                  <div class="description">
+                    <p>
+                      Color tool for designing user interface and by staying focus on accessibility.
                   </div>
                 </a>
               </div>
