--- a/index.html
+++ b/index.html
@@ -1337,7 +1337,7 @@
 <footer>
   <div class="footer-container">
     <div class="footer-content">
-     <p> Made with ❤️ and lots of coffee by <a class="footer-link" href="https://github.com/rosatiara" target="_blank">Rosa Tiara</a></p>
+     <p> Made with ❤️ by <a class="footer-link" href="https://github.com/rosatiara" target="_blank">Rosa Tiara</a></p>
     </div>
  
   </div>
