--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li id="tpc6"><a class="list" href="#links6">Resources</a></li>
           <li id="tpc7"><a class="list" href="#links7">Fonts, Icons, and Colors</a></li>
           <li id="tpc8"><a class="list" href="#links8">Online Playgrounds</a></li>
-          <li id="tpc9"><a class="list" href="#links9">Tech News</a></li>
+          <li id="tpc9"><a class="list" href="#links9">Tech News & Blogs</a></li>
           <li id="tpc10"><a class="list" href="#links10">Coding Practice</a></li>
         </ul>
       </div>
@@ -1120,7 +1120,7 @@
     </div>
 
     <!-- TECH NEWS -->
-    <h2>Tech News</h2>
+    <h2>Tech News & Blogs</h2>
     <div class="topic--content" id="links9">
         <div class="content-item technews">
           <div class="padding">
@@ -1201,6 +1201,54 @@
               <div class="description">
                 <p>
                   Aiming at using authoritative and trustworthy journalism to help people take better tech-related decisions.
+                </p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="content-item technews">
+          <div class="padding">
+            <a href="https://hackernoon.com/" target="_blank">
+              <div class="link-title">hackernoon</div>
+              <div class="description">
+                <p>
+                  Read and write articles about startups, tech giants, cryptocurrency, and others.
+                </p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="content-item technews">
+          <div class="padding">
+            <a href="https://www.datasciencecentral.com/" target="_blank">
+              <div class="link-title">Data Science Central</div>
+              <div class="description">
+                <p>
+                  Read all the things you need to know about data science here.
+                </p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="content-item technews">
+          <div class="padding">
+            <a href="https://towardsdatascience.com/" target="_blank">
+              <div class="link-title">towardsdatascience</div>
+              <div class="description">
+                <p>
+                  A popular blog about data science written by data science experts.
+                </p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="content-item technews">
+          <div class="padding">
+            <a href="https://www.kdnuggets.com/" target="_blank">
+              <div class="link-title">kdnuggets</div>
+              <div class="description">
+                <p>
+                  read AI and friends stuffs here
                 </p>
               </div>
             </a>
