edited HackerNews link

--- a/index.html
+++ b/index.html
@@ -1124,7 +1124,7 @@
     <div class="topic--content" id="links9">
         <div class="content-item technews">
           <div class="padding">
-            <a href="https://play.tailwindcss.com/" target="_blank">
+            <a href="https://thehackernews.com/" target="_blank">
               <div class="link-title">Hacker News</div>
               <div class="description">
                 <p>
