--- a/index.html
+++ b/index.html
@@ -927,6 +927,18 @@
               </div>
             </div>
             <div class="content-item fontsicons">
+                <div class="padding">
+                  <a href="https://webgradients.com/" target="_blank">
+                    <div class="link-title">Web Gradients</div>
+                    <div class="description">
+                      <p>
+                        Copy, paste, and use your favorite gradient from this website. Free for commercial and personal use.
+                      </p>
+                    </div>
+                  </a>
+                </div>
+              </div>
+            <div class="content-item fontsicons">
               <div class="padding">
                 <a href="https://feathericons.com/" target="_blank">
                   <div class="link-title">Feather Icons</div>
@@ -1004,7 +1016,7 @@
                   <div class="link-title">1001 Fonts</div>
                   <div class="description">
                     <p>
-                      New and fresh fonts are available to download (free and paid are both available).
+                      New and fresh fonts are available to download (free and paid are both available). </p>
                   </div>
                 </a>
               </div>
